client/src/css/main.css
/***[Page Structure]********/
body {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	background-color: #333333;
	font-size: 10px;
	padding: 0;
	margin: 0;

    --primary-color: #9C0000;
}
td, th {
	font-size: 10px;
}
button {
	all: unset;
}
#global-container {
	margin: 0 auto;
	max-width: 640px;
	min-width: 360px;
}
#header {
	height: 102px;
	margin: 1em auto;
	padding: 1em;
	background-color: #FFFFFF;
	border-radius: 1em;
}
#contents {
	margin: 1em auto;
	padding: 1em;
	background-color: #FFFFFF;
	border-radius: 1em;
}
#footer {
	margin-top: -0.8em;
	padding: 0 1em;
}
.note {
	margin: 1em auto;
	padding: 1em 3.5em 1em;
	background-color: #FFFFCC;
	background-image: url(img/date_add.png);
	background-position: 1em 50%;
	background-repeat: no-repeat;
	border-radius: 1em;
}
.click-to-copy {
	display: inline-block;
	cursor: copy;
	border-radius: 1em;
	padding: 0.3em 0.8em;
}
.click-to-copy:hover {
	background: #CCCCAA;
}

/***[Logo]******************/
#logo {
	float: right;
	height: 100px;
	width: 100px;
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center;
}
#logo.worldcup-1930 { background-image: url(img/logo/wc/wc1930.webp); }
#logo.worldcup-1934 { background-image: url(img/logo/wc/wc1934.webp); }
#logo.worldcup-1938 { background-image: url(img/logo/wc/wc1938.webp); }
#logo.worldcup-1950 { background-image: url(img/logo/wc/wc1950.webp); }
#logo.worldcup-1954 { background-image: url(img/logo/wc/wc1954.webp); }
#logo.worldcup-1958 { background-image: url(img/logo/wc/wc1958.webp); }
#logo.worldcup-1962 { background-image: url(img/logo/wc/wc1962.webp); }
#logo.worldcup-1966 { background-image: url(img/logo/wc/wc1966.webp); }
#logo.worldcup-1970 { background-image: url(img/logo/wc/wc1970.webp); }
#logo.worldcup-1974 { background-image: url(img/logo/wc/wc1974.webp); }
#logo.worldcup-1978 { background-image: url(img/logo/wc/wc1978.webp); }
#logo.worldcup-1982 { background-image: url(img/logo/wc/wc1982.webp); }
#logo.worldcup-1986 { background-image: url(img/logo/wc/wc1986.webp); }
#logo.worldcup-1990 { background-image: url(img/logo/wc/wc1990.webp); }
#logo.worldcup-1994 { background-image: url(img/logo/wc/wc1994.webp); }
#logo.worldcup-1998 { background-image: url(img/logo/wc/wc1998.webp); }
#logo.worldcup-2002 { background-image: url(img/logo/wc/wc2002.webp); }
#logo.worldcup-2006 { background-image: url(img/logo/wc/wc2006.webp); }
#logo.worldcup-2010 { background-image: url(img/logo/wc/wc2010.webp); }
#logo.worldcup-2014 { background-image: url(img/logo/wc/wc2014.webp); }
#logo.worldcup-2018 { background-image: url(img/logo/wc/wc2018.webp); }
#logo.worldcup-2022 { background-image: url(img/logo/wc/wc2022.webp); }
#logo.worldcup-2026 { background-image: url(img/logo/wc/wc2026.webp); }

#logo.euro-2008 { background-image: url(img/logo/euro/euro2008.png); }
#logo.euro-2012 { background-image: url(img/logo/euro/euro2012.png); }
#logo.euro-2016 { background-image: url(img/logo/euro/euro2016.png); }
#logo.euro-2020 { background-image: url(img/logo/euro/euro2020.png); }
#logo.euro-2024 { background-image: url(img/logo/euro/euro2024.png); }

#logo.cwc-2025 { background-image: url(img/logo/cwc/cwc2025.svg); }

/***[Header]****************/
#header h1 {
	margin-top: 0;
	margin-right: 100px;
	margin-bottom: 0.3em;
	padding: 0.2em 0.3em;
	background-color: var(--primary-color);
	color: #FFFFFF;
	font-size: 20px;
	overflow: clip;
	text-overflow: ellipsis;
	white-space: nowrap;
}
#header #live {
	float: right;
	color: #FFF;
	background-color: #888888;
	border-radius: 4px;
	margin: 7px;
	padding: 3px 6px;
	cursor: pointer;
	position: relative;
	z-index: 1;
}
#header #live.active {
	background-color: #CC6600;
}
dl#menu {
	margin: 0 100px 0 0;
	padding: 0;
}
dl#menu dt {
	line-height: 21px;
	font-size: 140%;
	font-weight: bold;
	clear: left;
	float: left;
	width: 110px;
}
dl#menu dd {
	font-size: 110%;
	margin: 0;
	float: left;
}
dl#menu dd.right {
	float: right;
}
dl#menu dd a {
	display: block;
	padding: 0.4em 1.2em;
	text-decoration: none;
	color: black;
}
dl#menu dd a:hover {
	background: #999999;
	color: #FFFFFF;
}
dl#menu dd a.selected {
	background: #333333 url(img/l0.png) top left repeat-x;
	color: #FFFFFF;
}
dl#menu li ul li {
	display: inline;
}
dl#menu li ul li a {
	display: inline;
	padding: 0.2em 1em;
}

/***[Footer]****************/
#footer {
	color: #888888;
}
#footer p {
	margin: 0;
}
#footer > p {
	float: left;
}
#footer a {
	color: #888888;
	text-decoration: none;
}
#footer a.discrete {
	color: #333333;
}
#footer a:hover {
	color: #FFFFFF;
	text-decoration: underline;
}

/***[PWL]*******************/
#app-pwl {
	position: absolute;
	display: none;
	top: 0;
	left: 0;
	background: #FFFFFF url(img/loader.gif) 1.5em 50% no-repeat;
	border: 1px outset #333333;
	border-radius: 3em;
	padding: 2em 4em;
	width: 15em;
	text-align: center;
}

/***[Login]*****************/
#user-area {
	text-align: right;
}
#login-form fieldset {
	border: none;
	padding: 2px;
	margin: 0;
}
#login-form div {
	margin: 8px;
}
#login-form div.submit {
	text-align: right;
}
#login-form div.submit input {
	background-color: #EEEEEE;
	border: 1px outset #CCCCCC;
	color: #222222;
	padding: 1px 5px;
}

/***[Responsive Design]*****/
/**
 * Small   360px - 460px
 * Medium  460px - 640px
 * Large   640px+
 */
@media (max-width: 640px) { /* Target sizes: S, M */
	.media-L { /* Only visible in `large` screens (L) */
		display: none;
	}
	dl#menu dt + dd {
		clear: left;
	}
}

@media (max-width: 460px) { /* Target size: S */
	.media-ML { /* Only visible in `medium` and `large` screens (ML) */
		display: none;
	}
	dl#menu dd a {
		padding: 0.4em 1em;
	}
}

